<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/attendee_gradient"
    android:id="@+id/attendeeHomepage"

    tools:context=".uiReference.attendees.AttendeeHomepageActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/attendee_update_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/att_profile_picture"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="@drawable/attendee_icon_temp"></ImageView>

                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"></Space>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/att_hello"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_extrabold"
                        android:text="HELLO"
                        android:textAlignment="center"
                        android:textColor="@color/darkColor"
                        android:textSize="70px" />

                    <TextView
                        android:id="@+id/att_homepage_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:text="\@Generated_User"
                        android:textAlignment="center"
                        android:textColor="@color/darkColor"
                        android:textSize="40px" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:orientation="horizontal"
                        android:textColor="@color/darkColor">

                        <TextView
                            android:id="@+id/att_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:fontFamily="@font/inter_medium"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="@color/darkColor" />

                        <TextView
                            android:id="@+id/att_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/inter_medium"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="@color/darkColor" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginEnd="40px"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/lightColor"
            android:clickable="true"
            android:src="@drawable/edit_vector"></com.google.android.material.floatingactionbutton.FloatingActionButton>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/rectangle_back"
                android:layout_width="wrap_content"
                android:layout_height="645dp"
                android:background="@color/lightColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/attendee_my_events_button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginVertical="30dp"
                    android:background="@drawable/attendee_buttons_gradient"
                    android:fontFamily="@font/inter_extrabold"
                    android:padding="20dp"
                    android:text="My Registered Events"
                    android:textAllCaps="true"
                    android:textColor="@color/lightColor"
                    android:textSize="25dp"
                    app:backgroundTint="@null"></Button>

                <Button
                    android:id="@+id/attendee_browse_events_button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginVertical="30dp"
                    android:background="@drawable/attendee_buttons_gradient"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="Browse Events"
                    android:textAllCaps="true"
                    android:textColor="@color/lightColor"
                    android:textSize="25dp"
                    app:backgroundTint="@null"></Button>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    ">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/QRScannerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="40px"
                        android:layout_marginBottom="15dp"
                        android:backgroundTint="@color/accentColorGreen"
                        android:clickable="true"
                        android:src="@drawable/qr_code_symbol"></com.google.android.material.floatingactionbutton.FloatingActionButton>
                </RelativeLayout>
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>