...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/organizer_details_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:contentDescription="Back Button"
                android:src="@drawable/back_arrow" />
...
                            app:layout_constraintHorizontal_bias="0.051"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/verifed_attendees"
                            app:layout_constraintVertical_bias="0.132" />

                        <Button
                            android:id="@+id/event_attendees_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/accentColorGreen"
                            android:text="@string/view_attendees_button"
                            android:textColor="@color/lightColor"
                            app:layout_constraintBottom_toBottomOf="parent"
...
