...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/attendee_gradient"
    android:focusable="auto"
    android:id="@+id/attendeeBrowseEvents"
    tools:context=".uiReference.attendees.AttendeeBrowseEventsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/browse_events_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            app:srcCompat="@drawable/back_arrow"
            android:layout_gravity="center"/>

...
